# convert2anki

./: .gitignore  Dockerfile  README.md  ai.py  app.py  decks.py  entrypoint.sh  helper.py  pyproject.toml
templates/: backside.html  cards_style.css  frontside.html  image_converted.html  upload.html
templates/statics/: styles.css
